--- a/style.css
+++ b/style.css
@@ -57,10 +57,6 @@ PRZYCISKI
 ######################################
 */
 
-.button-navigation {
-    display: none;
-}
-
 .button {
     padding: 7px 15px;
     border-radius: 3px;
@@ -335,6 +331,57 @@ SEKCJA "PHOTOS"
     }
 }
 
+@keyframes sizeImage {
+    0% {
+        transform: scale(1) rotate(0);
+        filter: brightness(1);
+    }
+    20% {
+        transform: scale(0.8) rotate(15deg);
+        filter: brightness(1);
+    }
+    40% {
+        transform: scale(0.8) rotate(-5deg);
+        filter: brightness(1);
+    }
+    100% {
+        transform: scale(1.2) rotate(0);
+        filter: brightness(1);
+    }
+}  
+
+@keyframes color {
+    0% {
+        transform: scale(1.2);
+        filter: brightness(1);
+    }
+    50% {
+        transform: scale(1.1);
+        filter: brightness(0.8);
+    }
+    100% {
+        transform: scale(1);
+        filter: brightness(0.5);
+    }
+}  
+
+.gallery__image {
+    animation-duration: 0.7s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+
+.gallery__image:hover {
+    z-index: 5;
+    animation-name: sizeImage;
+} 
+
+.color-animation {
+    position: relative;
+    animation-name: color;
+}   
+
 /*
 ######################################
 SEKCJA "CONTACT"
@@ -362,6 +409,10 @@ SEKCJA "CONTACT"
     padding-top: 40px;
 }
 
+.menu-button {
+    display: none;
+}
+
 
 /* //////////////////////////////// MOBILE STYLES //////////////////////////////// */
 
@@ -369,17 +420,7 @@ SEKCJA "CONTACT"
 
     body {
         background-image: none;
-        padding-top: 200px;
     }
-
-    .page-header {
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        background-color: #25072E;
-        width: 100vw;
-    }
-
     /*
     ######################################
     PRZYCISKI
@@ -389,14 +430,6 @@ SEKCJA "CONTACT"
     .button {
         width: 100%;
         height: 40px;
-    }
-
-    .button-navigation {
-        display: block;
-    }
-
-    .hamburger-menu {
-        height: 15px;
     }
 
     /*
@@ -416,12 +449,12 @@ SEKCJA "CONTACT"
     */
 
     .page-header {
-        position: fixed;
+        position: static;
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-bottom: 64px;
-        padding: 24px 24px 10px 24px;
+        padding: 24px 24px 0;
     }
 
     .page-footer {
@@ -442,9 +475,6 @@ SEKCJA "CONTACT"
 
     .page-navigation__items {
         text-align: center;
-        background-color: #25072E;
-        width: 100%;
-        padding-bottom: 10px;
     }
 
     /*
@@ -533,7 +563,6 @@ SEKCJA "CONTACT"
 
     .about {
         margin: 0;
-        position: static;
     }
 
     .about__desc-header {
@@ -633,16 +662,74 @@ SEKCJA "CONTACT"
 
     /*
     ######################################
-    STYLE DO JAVA SCRIPT
+    HAMBURGER MENU
     ######################################
     */
 
-    .invisible {
-        display: none;
-    } 
-
-    .visible {
-        display: flex;
+    .menu-button {
+        display: block;
     }
-}
 
+    .page-navigation {
+        height: 0;
+        opacity: 0;
+        transition-duration: 1s;
+        transition-property: opacity, height;
+        transition-timing-function: ease-out;
+    }
+
+    .page-navigation--visible {
+        opacity: 1;
+        height: 200px;
+    }
+
+    .menu-button {
+        height: 35px;
+        width: 40px;
+        background-color: transparent;
+        margin: 0;
+        padding: 0;
+        border-radius: 0px;
+        border: 0;
+    }
+
+    .hamburger-item {
+        display: flex;
+        flex-direction: column;
+        height: 5px;
+        width: 100%;
+        background-color: rgba(204, 200, 255, 0.8);
+    }
+
+    .hamburger-item:nth-child(1) {
+        margin-bottom: 10px;
+    }
+
+    .hamburger-item:nth-child(2) {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        transition-duration: 0.4s;
+        transition-property: transform;
+        transition-timing-function: linear;
+    }
+
+    .hamburger-item:nth-child(3) {
+        margin-top: 10px;
+        transition-duration: 0.4s;
+        transition-property: transform;
+        transition-timing-function: linear;
+    }
+
+    .hamburger-1--invisible {
+        display: none;
+    }
+
+    .hamburger-2-transform {
+        transform-origin: 0% 50%;
+        transform: rotate(45deg) translateY(-10px);
+    }
+
+    .hamburger-3-transform {
+        transform-origin: 0% 50%;
+        transform: rotate(-45deg) translateY(10px);
+}
