--- a/style.css
+++ b/style.css
@@ -729,4 +729,5 @@ SEKCJA "CONTACT"
     .hamburger-3-transform {
         transform-origin: 0% 50%;
         transform: rotate(-45deg) translateY(10px);
+    }
 }
